test/should-fail/jfxc1776bad1.visage
/**
 * Should-fail test JFXC-1776 : Check for malformed 'run()' function parameters
 *
 * @test/compile-error
 */

function run(arg : String) {
}
